=head1 OmniPITR

=head2 2011-01-20

=over

=item * Add internals.pod with first part of documentation of "how it works, and
why this way"

=back

=head2 2011-01-14

=over

=item * Locate any tablespaces in the data dir and include them in the backup
for both masters and slaves.  In the tar file these will be placed under the
'tablespaces' directory.

=back

=head2 2011-01-12

=over

=item * localize signal handler so that it does not get called outside of the
function call

=back

=head2 2011-01-05

=over

=item * Add proper stub for make_xlog_archive in OmniPITR::Program::Backup, that
enforces reimplementation in child classes.

=back

=head2 2010-09-28

=over

=item * Fix error with handling master backups where given data-dir contained
trailing / character

=back

=head2 2010-09-10

=over

=item * Fix error handling for pg_controldata

=back

=head2 2010-09-08

=over

=item * Add option to handle various ways of dealing with problems with calls to
pg_controldata (--error-pgcontroldata) to omnipitr-restore

=back

=head2 2010-09-07

=over

=item * Log whole response from pg_controldata in case there are problems with it

=back

=head2 2010-07-28

=over

=item * Add forgotten --nice-path to omnipitr-archive

=item * Add option not to use nice for omnipitr-archive, and both
omnipitr-backup-* programs

=back

=head2 2010-07-15

=over

=item * Added "IMPORTANT NOTICES" part to documents for omnipitr programs with
additional info that might not be obvious always.

=item * Added information about reuiring at least gnu tar 1.20 (earlier version
didn't have --transform option which is required by omnipitr-backup-slave)

=back

=head2 2010-06-30

=over

=item * Refactoring done.

=item * omnipitr-backup-slave in beta

=back

=head2 2010-06-29

=over

=item * First part of refactoring the code

=back

=head2 2010-06-28

=over

=item * Fix type in changelog (28 -> 23)

=item * Fix call to tar with 2 --transform options. Some tar versions don't