@@ -78,6 +78,17 @@ do
     fi
 done
 
+# versions check
+
+echo "Tar version"
+
+tar_version_ok="$( LC_ALL=C tar --version 2>/dev/null | head -n 1 | egrep '^tar \(GNU tar\) [0-9]*\.[0-9]*$' | awk '$NF >= 1.2 {print "OK"}' )"
+if [[ "$tar_version_ok" != "OK" ]]
+then
+    ERRORS_COUNT=$(( 1 + $ERRORS_COUNT ))
+    ERRORS[$ERRORS_COUNT]="tar (in \$PATH) is either not gnu tar, or gnu tar earlier than required 1.20"
+fi
+
 # Report of status
 
 if [[ $WARNINGS_COUNT -gt 0 ]]
